fix super container overflow

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,11 +3,17 @@ body {
 	line-height: 1.4 !important;
 }
 
+h1 {
+	margin: 0;
+	padding: 0.67em 0;
+}
+
 #app {
-	display: flex;
-	flex-direction: column;
+	min-width: 100%;
 	min-height: 100%;
-	max-width: 100vw;
+	width: fit-content;
+	color: white;
+	background-color: #252525;
 }
 
 #window-modal-container {
